# Space-Invaders

./: README.md  angular.json  package-lock.json  package.json  readme.md
frontend/: package-lock.json  package.json
frontend/server/: package-lock.json  package.json  tsconfig.json
frontend/server/src/: index.ts  (+2 more)
frontend/src/: game.js  index.html  polyfills.ts  styles.css
game/: .gitignore  copy-dist.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
game/src/: index.html  index.ts  readme.md
input/: Cargo.toml  backend_address.txt  dummy.http  kast.txt  readme.md
input/assets/: adjectives.txt  nouns.txt
input/src/: context.rs  event_handler.rs  execut_http_client.rs  frame_buffer.rs  gl_buffers.rs  gl_error_handler.rs  helpers_for_glyph.rs  main.rs  nickname_generator.rs  printer.rs  render_pass.rs  retrofy_scene.rs  retrofy_scene_builder.rs  scene.rs  shader_compiler.rs  sound_player.rs  spaceship_settings.rs  text_scene.rs
input/src/shader/: dumb.frag.glsl  dumb.vert.glsl  retrofy.frag.glsl  retrofy.vert.glsl  text.frag.glsl  text.vert.glsl
input/src/text_scene/: cost_calculator.rs  selected_input.rs  text_scene_text.rs
server/: .gitignore  package-lock.json  package.json  tsconfig.json
server/lib/: dashboard.model.js  index.js  player.model.js  state.js
server/src/: index.ts  player.model.ts  state.ts
shared/: package-lock.json  package.json  tsconfig.json
shared/lib/: dashboard.model.ts  player.model.ts
src/: index.html
src/app/: app.component.spec.ts  dashboard.service.ts  match.service.ts  socket-health.service.ts
(+55 files in other folders)
