[package]
name = "retro_font_render_test"
version = "0.1.0"
authors = ["PeerHenry <peer@infi.nl>"]
edition = "2018"

[dependencies]
spin_sleep = "0.3"
gl = "0.11"
glutin = "0.19"
glyph_brush = "0.3.0"
rand = "0.6.5"
escposify = "0.1.4"
hostname = "0.1.5"
reqwest = "0.9.10"
serde_json = "1.0.38"
rodio = "0.8.1"

[dev-dependencies]
lazy_static = "1"